--- a/Trabajo Practico N° 2/Libreria de Clases/Libreria de Clases.csproj
+++ b/Trabajo Practico N° 2/Libreria de Clases/Libreria de Clases.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{06ADFA07-298F-4C92-93FF-E688BFEFCF66}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{76957A93-678B-4316-98B5-F0834063634C}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Codigo_Principal</RootNamespace>
-    <AssemblyName>Codigo Principal</AssemblyName>
+    <RootNamespace>Libreria_de_Clases</RootNamespace>
+    <AssemblyName>Libreria de Clases</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,17 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Automovil.cs" />
+    <Compile Include="Camion.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="Concecionaria.cs" />
+    <Compile Include="Moto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Libreria de Clases\Libreria de Clases.csproj">
-      <Project>{76957a93-678b-4316-98b5-f0834063634c}</Project>
-      <Name>Libreria de Clases</Name>
-    </ProjectReference>
+    <Compile Include="Vehiculo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
